# swupd-probe

./: .gitignore  Makefile.am  README.md  configure.ac  swupd-probe.1  swupd-probe.c  swupd-probe.md  swupd-probe.path  swupd-probe.service
